Fixed falling down handle

--- a/main.html
+++ b/main.html
@@ -107,6 +107,7 @@
             margin-bottom: 30px;
             text-shadow: 0 5px 15px rgba(0,0,0,0.5);
             background: linear-gradient(to right, #ff7e5f, #feb47b);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             animation: title-glow 2s infinite alternate;
