--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="mainMenu" class="screen">
-        <h1 class="game-title">RUNNER ADVENTURE</h1>
+        <h1 class="game-title">НАШЕ ЧУДО</h1>
         <button id="playBtn" class="btn">ИГРАТЬ</button>
         <button id="editorBtn" class="btn">РЕДАКТОР УРОВНЕЙ</button>
         
