Added some platforms and enemies for level 1

--- a/test.html
+++ b/test.html
@@ -19,8 +19,8 @@
         <img src="map.png" id="mapImage", class="image"/>
         <div id="firstLevelBtn" class="levelBtn" data-level="weather_hills"
             data-description="Первый уровень: Начальная локация для новичков."></div>
-        <div id="secondLevelBtn" class="levelBtn" data-level="moria" data-description="Второй уровень: Увеличенная сложность.">
-        </div>
+        <div id="secondLevelBtn" class="levelBtn" data-level="moria"
+            data-description="Второй уровень: Увеличенная сложность."></div>
         <button id="backFromLevels" class="back-btn">← МЕНЮ</button>
         <div id="levelTooltip" class="level-tooltip">
             <div class="tooltip-content"></div>
