Добавил background слой

--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
         <button id="playBtn" class="btn">ИГРАТЬ</button>
     </div>
     <div id="map" class="map">
-        <img src="map.png" id="mapImage", class="image"/>
+        <img src="map.jpg" id="mapImage", class="image"/>
         <div id="firstLevelBtn" class="levelBtn" data-level="weather_hills"
             data-description="Первый уровень: Начальная локация для новичков."></div>
         <div id="secondLevelBtn" class="levelBtn" data-level="moria"
@@ -29,6 +29,7 @@
     
     <div id="gameScreen" class="screen">
         <button id="backFromGame" class="back-btn">← МЕНЮ</button>
+        <img id="cloudLayer" src="cloudLayer.jpg">
         <canvas id="gameCanvas"></canvas>
     </div>
 
