--- a/test.html
+++ b/test.html
@@ -30,6 +30,9 @@
     <div id="gameScreen" class="screen">
         <button id="backFromGame" class="back-btn">← МЕНЮ</button>
         <img id="cloudLayer" src="cloudLayer.jpg">
+        <img id="layer2" src="layer2.png">
+        <img id="layer3" src="layer3.png">
+        <img id="layer4" src="layer4.png">
         <canvas id="gameCanvas"></canvas>
     </div>
 
