Added cutscene for level 1!

--- a/test.html
+++ b/test.html
@@ -27,6 +27,18 @@
         </div>
     </div>
     
+    <div id="cutsceneScreen" class="screen">
+        <video id="cutsceneVideo">
+            <source src="cutscene1.mp4" type="video/mp4">
+            Ваш браузер не поддерживает видео!
+            Your browser does not support video!
+            ཁྱེད་ཀྱི་དྲ་ལྗོངས་ཀྱིས་བརྙན་འཕྲིན་ལ་རྒྱབ་སྐྱོར་བྱེད་ཀྱི་མེད།
+        </video>
+        <div id="cutsceneControls">
+            <button id="skip" class="btn">Пропустить</button>
+        </div>
+    </div>
+
     <div id="gameScreen" class="screen">
         <button id="backFromGame" class="back-btn">← МЕНЮ</button>
         <img id="cloudLayer" src="Images/cloudLayer.jpg">
