--- a/test.html
+++ b/test.html
@@ -30,6 +30,8 @@
     <div id="cutsceneScreen" class="screen">
         <video id="cutsceneVideo">
             <source src="cutscene1.mp4" type="video/mp4">
+            <source src="cutscene2.mp4" type="video/mp4">
+            <source src="cutscene3.mp4" type="video/mp4">
             Ваш браузер не поддерживает видео!
         </video>
         <div id="cutsceneControls">
