Added controls menu

--- a/test.html
+++ b/test.html
@@ -44,6 +44,26 @@
         <canvas id="gameCanvas"></canvas>
     </div>
 
+    <div class="controls-info">
+        <h4>Управление</h4>
+        <div class="control-item">
+            <span class="key">Q</span>
+            <span class="action">Стрельба</span>
+        </div>
+        <div class="control-item">
+            <span class="key">W</span>
+            <span class="action">Смена типа оружия</span>
+        </div>
+        <div class="control-item">
+            <span class="key">E</span>
+            <span class="action">Ускорение</span>
+        </div>
+        <div class="control-item">
+            <span class="key">Пробел</span>
+            <span class="action">Прыжок</span>
+        </div>
+    </div>
+
     <script src="map.js"></script>
     <script type="module" src="main.js"></script>
 </body>
